--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -3,34 +3,37 @@ import Eclair from "./Eclair.astro";
 ---
 
 <section class='strengths'>
-  <h2 class="subtitle">Mes forces</h2>
+  <h2 class='subtitle'>Pourquoi me choisir ?</h2>
   <Eclair />
   <div class='services'>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Développeur Fullstack</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        J'intègrerai votre équipe pour intervenir sur n'importe quel point de
+        votre stack Javascript / Typescript. Ayant une appétance pour le
+        frontend, je serai opérationnel sur votre application React, Vue, ou
+        Svelte. J'interviendrai également sur vos API en Node (Express, Loopback
+        ou NestJS). Enfin, mes compétences en réseau et système me permettent
+        d'intéragir aisément avec les différentes pipelines de CI/CD.
       </p>
     </div>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Qualité et maintenabilité</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        Je produis du travail qualitatif et maintenable. Formé à la clean
+        architecture, au TDD et habitué à travailler avec les méthodologies de
+        gestion de projet AGILE, je saurai remplir les exigences de qualité de
+        service et maintenir une forte réutilisabilité du code tout en
+        respectant les délais imposés. En front, je respecterai les exigences en
+        termes d'accessibilité, de performance et de SEO.
       </p>
     </div>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Sensible à l'éco-conception</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        J'apporterai une nouvelle vision sur l'éco-conception de vos projets.
+        Mes armes: le serverless, l'optimisation des algorithmes, la réduction
+        en taille des medias et flux de données.
       </p>
     </div>
   </div>
