--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -1,31 +1,33 @@
 <section class='website'>
-  <h2 class="subtitle">Ce que je<br />propose</h2>
+  <h2 class='subtitle'>Mes sites web</h2>
   <div class='services'>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Des sites sur mesure</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        Les sites que je propose sont adaptés à votre projet et mettront en
+        avant les valeurs que vous souhaitez transmettre. Je travaille en
+        partenariat avec une graphiste freelance pour vous propoer un design
+        moderne et efficace.
       </p>
     </div>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Des sites performants</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        Concus en priorité pour les mobiles, mes sites ont un poids réduit, un
+        temps de chargement rapide. Les médias sont optimisés pour les
+        différents types d'appareils et le design s'adapte à toutes les tailles
+        d'écran.
       </p>
     </div>
     <div class='service'>
-      <h3>Sites clé en main et faciles</h3>
+      <h3>Des sites clé en main</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+        Vous pouvez en option avoir le contrôle total sur le contenu de votre
+        site. Créez vous-même les pages dont vous avez besoin à partir des
+        sections imaginées par le graphiste. Ajoutez et supprimez des pages à
+        votre convenance, modifiez vous-même vos textes pour coller à vos
+        besoins en référencement. Ajoutez des sections à vos pages existantes
+        pour promouvoir une offre temporaire.
       </p>
     </div>
   </div>
@@ -90,6 +92,9 @@
         max-width: 40rem;
         color: white;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
         text-shadow:
           0px 0px 2em #000000,
           0px 0px 0.2em #000000;
@@ -102,7 +107,7 @@
           height: 167px;
           position: absolute;
           top: 30%;
-          left: 45vw;
+          left: calc(100% + 5vw);
         }
         &:nth-of-type(2) {
           align-self: flex-end;
@@ -116,7 +121,7 @@
             height: 217px;
             position: absolute;
             top: 40%;
-            right: 55vw;
+            right: calc(100% + 5vw);
           }
         }
         &:nth-of-type(3)::before {
@@ -128,7 +133,7 @@
           height: 191px;
           position: absolute;
           bottom: 20%;
-          left: 50vw;
+          left: calc(100% + 3vw);
         }
       }
     }
