--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -1,20 +1,32 @@
-<section class='ecoconception' id="ecoconception">
-  <h2 class="subtitle">Eco-conception</h2>
+<section class='ecoconception' id='ecoconception'>
+  <h2 class='subtitle'>Eco-conception</h2>
   <div class='content'>
-    <h3>Ce que l'eco-conception n'est pas</h3>
+    <h3>Ce qu'un site éco-conçu n'est pas ?</h3>
     <ul>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
-      <li>Du gros caca</li>
+      <li>
+        Un Wordpress. Un site éco-conçu ne laisse pas de serveur ni de base de
+        données allumés quand ce n'est pas nécessaire.
+      </li>
+      <li>
+        Un site en noir et blanc. Economiser des pixels ne représente pas une
+        économie d'énergie significative.
+      </li>
+      <li>
+        Un site sans image. Bien optimisés, les medias ne sont pas un problème.
+      </li>
+      <li>
+        Un site figé. Les animations correctement conçues sont peu gourmandes en
+        ressources.
+      </li>
+      <li>
+        Un site impossible à modifier en temps réel. Les technologies modernes
+        permettent de modifier vos pages en gardant un impact minimal sur
+        l'environnement.
+      </li>
     </ul>
   </div>
-  <div class="peacock">
-    <img src="/images/peacock.webp" alt="Peacock" width="747" height="783">
+  <div class='peacock'>
+    <img src='/images/peacock.webp' alt='Peacock' width='747' height='783' />
   </div>
 </section>
 
@@ -64,7 +76,10 @@
           0px 0px 0.2em #000000;
       }
       ul {
-        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        // list-style-type: none;
       }
     }
     .peacock {
@@ -74,14 +89,19 @@
       height: 50vh;
       overflow: hidden;
       &::before {
-        content: '';
-        position:absolute;
+        content: "";
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         z-index: 10;
-        background: radial-gradient(closest-side, #01112000, #01112000 50%, #011120);
+        background: radial-gradient(
+          closest-side,
+          #01112000,
+          #01112000 50%,
+          #011120
+        );
       }
       img {
         height: 100%;
