Recette Header Footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
   <div class='links'>
     <a href='#'>Mentions Légales</a>
     <a target='blank' href='www.linkedin.com/in/kevin-lanvin-0208281b5'>LinkedIn</a>
+    <a target='blank' href='https://www.malt.fr/profile/kevinlanvin?overview'>Malt</a>
   </div>
   <span class='design'
     >Website designed by <a target='blank' href='https://www.malt.fr/profile/mgdg'
@@ -19,14 +20,14 @@
     bottom: 0;
     transform: translateX(-50%);
     border-top: 1px solid white;
-    padding: 5rem 0;
+    padding: 2rem 0;
     display: flex;
     justify-content: space-between;
     color: white;
   }
   .links {
     display: flex;
-    gap: 5rem;
+    gap: 2rem;
     a {
       color: white;
     }
@@ -34,21 +35,9 @@
   .design {
     font-size: 1rem;
     position: relative;
-    transform: rotate(-2.5deg);
     a {
       color: white;
       text-decoration: underline;
-    }
-    &::after {
-      content: "";
-      background: url("/images/designArrow.svg");
-      background-size: contain;
-      background-repeat: no-repeat;
-      width: 220px;
-      height: 71px;
-      position: absolute;
-      top: 50%;
-      right: 50%;
     }
   }
 
