--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -90,6 +90,14 @@ import Footer from "../components/Footer.astro";
 
   @font-face {
     font-family: "Poppins";
+    src: url("/fonts/Poppins-ExtraLightItalic.ttf");
+    font-weight: 100;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Poppins";
     src: url("/fonts/Poppins-BoldItalic.ttf");
     font-weight: bold;
     font-style: italic;
