--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 ---
 import BorderedButton from "./BorderedButton.astro";
 import Logo from "./Logo.astro";
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(1);
 ---
 
 <header>
@@ -9,11 +11,21 @@ import Logo from "./Logo.astro";
   </a>
   <nav>
     <span class='intro'>Vous souhaitez :</span>
-    <a href='/creation-site-web'>Un site web</a>
-    <a href='/services'>Un dev fullstack</a>
-    <a href='/portfolio'>Voir mes réalisations</a>
+    <a
+      class={currentPath === "creation-site-web" ? "active" : ""}
+      href='/creation-site-web'>Un site web</a
+    >
+    <a class={currentPath === "services" ? "active" : ""} href='/services'
+      >Un dev fullstack</a
+    >
+    <a class={currentPath === "portfolio" ? "active" : ""} href='/portfolio'
+      >Voir mes réalisations</a
+    >
   </nav>
-  <BorderedButton addedClasses='headerButton' link="mailto:info.lanvink@gmail.com">Me contacter</BorderedButton>
+  <BorderedButton
+    addedClasses='headerButton'
+    link='mailto:info.lanvink@gmail.com'>Me contacter</BorderedButton
+  >
   <div class='menuMobileButton'>
     <input type='checkbox' name='menuMobileToggle' id='menuMobileToggle' />
     <label for='menuMobileToggle' class='menuMobileToggleLabel'>
@@ -24,11 +36,19 @@ import Logo from "./Logo.astro";
     </label>
     <nav class='menuMobile'>
       <span class='intro'>Vous souhaitez :</span>
-      <a href='/creation-site-web'>Un site web</a>
-      <a href='/services'>Un dev fullstack</a>
-      <a href='/portfolio'>Voir mes réalisations</a>
-      <BorderedButton addedClasses='mobileHeaderButton' link="mailto:info.lanvink@gmail.com"
-        >Me contacter</BorderedButton
+      <a
+        class={currentPath === "creation-site-web" ? "active" : ""}
+        href='/creation-site-web'>Un site web</a
+      >
+      <a class={currentPath === "services" ? "active" : ""} href='/services'
+        >Un dev fullstack</a
+      >
+      <a class={currentPath === "portfolio" ? "active" : ""} href='/portfolio'
+        >Voir mes réalisations</a
+      >
+      <BorderedButton
+        addedClasses='mobileHeaderButton'
+        link='mailto:info.lanvink@gmail.com'>Me contacter</BorderedButton
       >
     </nav>
   </div>
@@ -82,12 +102,33 @@ import Logo from "./Logo.astro";
     .intro {
       font-style: italic;
       color: white;
-      font-weight: 300;
+      font-weight: 100;
     }
     a {
       color: white;
       text-decoration: none;
       padding: 1em;
+      position: relative;
+      &::after {
+        content: "";
+        width: calc(100% - 2rem);
+        position: absolute;
+        bottom: 0.5rem;
+        left: 1rem;
+        height: 1px;
+        background: linear-gradient(90deg, white, transparent);
+        transform: scaleX(0);
+        transition: transform 0.2s ease-in-out;
+        transform-origin: left center;
+      }
+      &:hover::after {
+        transform: scaleX(1);
+      }
+    }
+    .active {
+      &::after {
+        transform: scaleX(1);
+      }
     }
   }
 
