--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -1,5 +1,7 @@
 <div class='squareHammer'>
-  <div class='square'></div>
+  <div class='square'>
+    <span class='text'>Design sur mesure</span>
+  </div>
   <div class='square'>
     <span class='text'>Facilité d'utilisation et clef en main</span>
   </div>
@@ -44,13 +46,13 @@
 
   @media screen and (max-width: 600px) {
     .squareHammer {
-      gap: 1rem;
+      gap: .5rem;
       .square {
-        width: 10rem;
-        height: 10rem;
+        width: 7rem;
+        height: 7rem;
         border-radius: 1rem;
         .text {
-          font-size: 1rem;
+          font-size: .7rem;
         }
       }
     }
