--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -153,7 +153,9 @@ import Footer from "../components/Footer.astro";
         90deg,
         rgba(255, 255, 255, 0.1),
         rgba(255, 255, 255, 0.1) 25%,
+        white 30%,
         white 50%,
+        white 70%,
         rgba(255, 255, 255, 0.1) 75%,
         rgba(255, 255, 255, 0.1)
       )
