--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -4,16 +4,20 @@ import SquareHammer from "./SquareHammer.astro";
 
 <section class='websiteCreation'>
   <h2 class='subtitle'>Création de sites web</h2>
-  <p>
-    Je réalise des <strong>sites web sur mesure</strong>, faciles à prendre en
-    main.<br />Vous pourrez choisir entre <strong>un site statique</strong> pour
-    les petis budgets ou <strong>un site clé en main</strong> qui vous permettra
-    de créer et administrer vous-mêmes votre contenu.<br />Tous mes sites sont <a
-      href='creation-site-web#ecoconception'>éco-conçus</a
-    >, optimisés pour mobiles, accessibles et performants.
-  </p>
   <div class='bigSquare'>
     <SquareHammer class='squareHammer' />
+  </div>
+  <div class='text'>
+    <h3>Création de sites web</h3>
+    <p>
+      Je réalise des <strong>sites web sur mesure</strong>, faciles à prendre en
+      main.<br />Vous pourrez choisir entre <strong>un site statique</strong> pour
+      les petis budgets ou <strong>un site clé en main</strong> qui vous permettra
+      de créer et administrer vous-mêmes votre contenu.<br />Tous mes sites sont <a
+        href='creation-site-web#ecoconception'>éco-conçus</a
+      >, optimisés pour mobiles, accessibles et performants.
+    </p>
+    <a href='creation-site-web' class='services'>Découvrir mes services </a>
     <svg
       class='circle'
       viewBox='0 0 800 800'
@@ -33,7 +37,6 @@ import SquareHammer from "./SquareHammer.astro";
         stroke-width='4'
         stroke='url(#circleGradient)'></circle>
     </svg>
-    <a href='creation-site-web' class='services'>Découvrir mes services </a>
   </div>
 </section>
 
@@ -43,45 +46,25 @@ import SquareHammer from "./SquareHammer.astro";
     box-shadow: 0 150px 150px 150px #cdd6e8;
     position: relative;
     display: flex;
-    flex-direction: column;
-    gap: 10rem;
+    gap: 5rem;
     padding: 0 12%;
+    padding-top: 15rem;
     z-index: 1;
     h2 {
-      top: 0;
-      margin-left: -16%;
-    }
-    p {
-      color: #4f4f4f;
       position: absolute;
-      top: 20rem;
-      right: 12%;
-      width: calc(100% - 45rem);
-      max-width: 50rem;
+      top: 0;
+      margin-left: -12%;
     }
-    :global(.squareHammer) {
-      z-index: 2;
-    }
-    .bigSquare {
-      position: relative;
-      width: 45.24rem;
-      height: 45.24rem;
-      left: -16%;
-      transform: translateX(-25%);
-      .circle {
-        width: 45rem;
-        height: 45rem;
-        position: absolute;
-        left: 0;
-        top: 30%;
-        z-index: -1;
-        animation: rotateCircle 4s linear infinite;
+    .text {
+      color: #4f4f4f;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 2rem;
+      h3 {
+        font-size: 2rem;
       }
       .services {
-        position: absolute;
-        width: max-content;
-        left: 100%;
-        top: 85%;
         font-weight: bold;
         color: #4f4f4f;
         background: #4f4f4f0a;
@@ -91,29 +74,36 @@ import SquareHammer from "./SquareHammer.astro";
         backdrop-filter: blur(4px);
         text-decoration: none;
         cursor: pointer;
-        &::after {
-          content: "";
-          background: url("/images/servicesArrow.svg");
-          background-size: contain;
-          background-repeat: no-repeat;
-          width: 200px;
-          height: 100px;
-          position: absolute;
-          bottom: 100%;
-          right: 65%;
-        }
       }
+      .circle {
+        width: 45rem;
+        height: 45rem;
+        position: absolute;
+        left: 75%;
+        top: 40%;
+        z-index: -1;
+        animation: rotateCircle 4s linear infinite;
+      }
+    }
+    :global(.squareHammer) {
+      z-index: 2;
+    }
+    .bigSquare {
+      position: relative;
+      width: 724px;
+      height: 724px;
+      flex: 1 0 auto;
     }
   }
   @keyframes rotateCircle {
     0% {
-      transform: rotate(0deg);
+      transform: rotate(180deg);
     }
     50% {
-      transform: rotate(360deg);
+      transform: rotate(-180deg);
     }
     100% {
-      transform: rotate(360deg);
+      transform: rotate(-180deg);
     }
   }
 
@@ -122,39 +112,29 @@ import SquareHammer from "./SquareHammer.astro";
       display: flex;
       flex-direction: column;
       gap: 2rem;
-      padding: 0 1rem;
-      padding-bottom: 15rem;
+      padding: 15rem 1rem 0 1rem;
       h2 {
         margin-top: 5rem;
         margin-left: -1rem;
       }
       p {
         position: static;
-        margin: 2rem 0;
-        padding: 0 1rem;
         width: 100%;
       }
       :global(.squareHammer) {
         z-index: 2;
       }
       .bigSquare {
-        width: 25rem;
-        height: 25rem;
+        width: 328px;
+        height: 328px;
+        align-self: center;
         .circle {
           width: 25rem;
           height: 25rem;
         }
-        .services {
-          top: 150%;
-          left: 50%;
-          &::after {
-            width: 150px;
-            height: 75px;
-            right: 20%;
-            transform-origin: bottom right;
-            transform: rotate(35deg);
-          }
-        }
+      }
+      .text {
+        gap: 2rem;
       }
     }
   }
