--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -19,7 +19,7 @@ const { inverted = false, title = true } = Astro.props;
 ---
 
 <section class="partnersSection">
-  <h2>Ils m'ont fait confiance</h2>
+  {title && <h2>Ils m'ont fait confiance</h2> }
   <div class='partners'>
     {
     inverted ? (
