--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -158,6 +158,7 @@
     p {
       color: white;
       font-size: 5rem;
+      line-height: 5rem;
       text-align: center;
       padding: 10rem;
       border-radius: 5rem;
