--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ import Footer from "../components/Footer.astro";
   @font-face {
     font-family: "Poppins";
     src: url("/fonts/Poppins-ExtraLight.ttf");
-    font-weight: lighter;
+    font-weight: 100;
     font-style: normal;
     font-display: swap;
   }
