--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -97,4 +97,13 @@
       }
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .allTechnologies {
+      padding: 5rem 1rem 12rem 1rem;
+      h2 {
+        left: -1rem;
+      }
+    } 
+  }
 </style>
