--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -30,7 +30,7 @@ import BorderedButton from "./BorderedButton.astro";
       </div>
       <div class='option'>
         <div class='header'>
-          <h3>Animations (option)</h3>
+          <h3>Animations</h3>
         </div>
         <p class='content'>
           Ajouter de la vie à votre site avec des animations performantes et
@@ -248,7 +248,6 @@ import BorderedButton from "./BorderedButton.astro";
         margin-bottom: 0;
       }
       .subtitle {
-        font-size: 1.5rem;
         margin-top: 5rem;
       }
       .description {
@@ -256,7 +255,7 @@ import BorderedButton from "./BorderedButton.astro";
         margin-bottom: 0;
       }
       .priceCard {
-        width: calc(100% - 2rem);
+        width: 100%;
         padding: 1rem;
         .header {
           font-size: 1rem;
@@ -271,6 +270,9 @@ import BorderedButton from "./BorderedButton.astro";
         bottom: calc(100% + 1rem);
         left: unset;
         right: 20%;
+      }
+      .options {
+        grid-template-columns: 1fr;
       }
     }
   }
