Portfolio contact title

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -38,6 +38,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         mockupName='Pauline Gorlier'
       />
       <div class='scrollableCard contactMe'>
+        <h2>Réalisons votre projet !</h2>
         <p>
           Mes projets vous intéressent et vous souhaiteriez que je développe
           votre site web ?
@@ -483,6 +484,10 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
     justify-content: center;
     gap: 2rem;
     left: 50%;
+    color: white;
+    h2 {
+      font-size: 2rem;
+    }
     p {
       text-shadow:
         0px 0px 20px #000000,
