Change text shadows

--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -145,9 +145,7 @@ import BorderedButton from "./BorderedButton.astro";
       color: white;
       text-align: center;
       font-size: 2rem;
-      text-shadow:
-        0px 0px 20px #000000aa,
-        0px 0px 0.2em #000000aa;
+      text-shadow: var(--text-shadow);
       z-index: 2;
       margin-top: 3rem;
     }
@@ -155,9 +153,7 @@ import BorderedButton from "./BorderedButton.astro";
       color: white;
       width: max(80%, 1000px);
       align-self: center;
-      text-shadow:
-        0px 0px 20px #000000aa,
-        0px 0px 0.2em #000000aa;
+      text-shadow: var(--text-shadow);
       text-align: center;
     }
     .options {
