--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -4,9 +4,6 @@ import SquareHammer from "./SquareHammer.astro";
 
 <section class='websiteCreation'>
   <h2 class='subtitle'>Création de sites web</h2>
-  <div class='bigSquare'>
-    <SquareHammer class='squareHammer' />
-  </div>
   <div class='text'>
     <h3>Création de sites web</h3>
     <p>
@@ -37,6 +34,9 @@ import SquareHammer from "./SquareHammer.astro";
         stroke-width='4'
         stroke='url(#circleGradient)'></circle>
     </svg>
+  </div>
+  <div class='bigSquare'>
+    <SquareHammer class='squareHammer' />
   </div>
 </section>
 
@@ -90,8 +90,8 @@ import SquareHammer from "./SquareHammer.astro";
     }
     .bigSquare {
       position: relative;
-      width: 724px;
-      height: 724px;
+      width: 36rem;
+      height: 36rem;
       flex: 1 0 auto;
     }
   }
