--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -71,9 +71,7 @@
       h3 {
         color: white;
         font-size: 2rem;
-        text-shadow:
-          0px 0px 20px #000000,
-          0px 0px 0.2em #000000;
+        text-shadow: var(--text-shadow);
       }
       ul {
         display: flex;
