--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -51,9 +51,7 @@ import BorderedButton from "./BorderedButton.astro";
     h3 {
       color: white;
       font-size: 2rem;
-      text-shadow:
-        0px 0px 20px #000000,
-        0px 0px 0.2em #000000;
+      text-shadow: var(--text-shadow);
     }
     .gridText {
       display: flex;
