--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -80,9 +80,7 @@ import Eclair from "./Eclair.astro";
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        text-shadow:
-          0px 0px 2em #000000,
-          0px 0px 0.2em #000000;
+        text-shadow: var(--text-shadow);
         &:nth-of-type(2) {
           align-self: flex-end;
         }
