--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -95,9 +95,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        text-shadow:
-          0px 0px 2em #000000,
-          0px 0px 0.2em #000000;
+        text-shadow: var(--text-shadow);
         &:nth-of-type(1)::before {
           content: "";
           background: url("/images/arrow-service-1.svg");
