--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -114,6 +114,8 @@ import Footer from "../components/Footer.astro";
       rgb(var(--accent-light)) 30%,
       white 60%
     );
+    --text-shadow: 
+        0px 0px 50px #000000aa;
   }
   * {
     box-sizing: border-box;
