Change mockups and partners

--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -25,7 +25,7 @@ import BorderedButton from "./BorderedButton.astro";
       <img
         width='1076'
         height='980'
-        src='/images/project-lamie.png'
+        src='/images/lastwork.webp'
         alt='Last work'
         sizes='(max-width: 600px) calc(100vw -2rem), 60vw'
       />
