--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -38,6 +38,8 @@ const {
       object-position: left bottom;
       width: auto;
       height: auto;
+      border: 1px solid #ffffff80;
+      border-radius: 1rem;
     }
   }
   .description {
