--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -18,14 +18,14 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         projectDescription="Réalisation d'un site vitrine NuxtJS alimenté par le CMS Strapi. Ajout d'un tunnel de commande complexe 100% paramétrable."
         link='lamie-mutuelle.com'
         linkLabel='Voir le site'
-        mockup='/images/project-lamie.png'
+        mockup='/images/project-lamie.webp'
         mockupName='Lamie Mutuelle'
       />
       <ProjectCard
         className='scrollableCard'
         clientName='SpreadTheLive'
         projectDescription="Application mobile de streaming video d'événements sportifs en React"
-        mockup='/images/project-spreadthelive.png'
+        mockup='/images/project-spreadthelive.webp'
         mockupName='SpreadTheLive'
       />
       <ProjectCard
@@ -34,7 +34,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         projectDescription='Site vitrine alimenté par le CMS git-based Decap.'
         link='pauline-gorlier.com'
         linkLabel='Voir le site'
-        mockup='/images/project-pauline.png'
+        mockup='/images/project-pauline.webp'
         mockupName='Pauline Gorlier'
       />
       <div class='scrollableCard contactMe'>
