--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -241,6 +241,9 @@ const currentPath = pathname.slice(1);
         transform: translateY(-100vh);
         a {
           padding: 0.5rem;
+          &::after {
+            bottom: 0rem;
+          }
         }
         .intro {
           margin-bottom: 3rem;
