--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -78,6 +78,7 @@ const {
       flex-direction: column;
       :global(img) {
         min-height: 0;
+        width: max-content;
       }
     }
     .description {
