--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -50,6 +50,8 @@ import SquareHammer from "./SquareHammer.astro";
     padding: 0 12%;
     padding-top: 15rem;
     z-index: 1;
+    min-height: 0;
+    height: 25rem;
     h2 {
       position: absolute;
       top: 0;
@@ -113,6 +115,7 @@ import SquareHammer from "./SquareHammer.astro";
       flex-direction: column;
       gap: 2rem;
       padding: 15rem 1rem 0 1rem;
+      height: 35rem;
       h2 {
         margin-top: 5rem;
         margin-left: -1rem;
