--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -77,7 +77,6 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        // list-style-type: none;
       }
     }
     .peacock {
@@ -123,6 +122,9 @@
         width: 100%;
         h3 {
           font-size: 1.5rem;
+        }
+        ul {
+          margin-left: 1rem;
         }
       }
       .peacock {
