Fix partners and portfolio chrome

--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -44,7 +44,7 @@ import Partners from "./Partners.astro";
       display: flex;
       z-index: 10;
       width: 100vw;
-      bottom: 0;
+      bottom: -10rem;
     }
     .fireflies {
       position: absolute;
