--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -36,10 +36,11 @@ const {
     :global(img) {
       object-fit: contain;
       object-position: left bottom;
-      width: auto;
       height: auto;
       border: 1px solid #ffffff80;
       border-radius: 1rem;
+      min-width: 0;
+        width: max-content;
     }
   }
   .description {
@@ -78,7 +79,6 @@ const {
       flex-direction: column;
       :global(img) {
         min-height: 0;
-        width: max-content;
       }
     }
     .description {
