Change websiteCreation images

--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -45,7 +45,7 @@
     gap: 10rem;
     flex-direction: column;
     padding: 0 12%;
-    padding-top: 10rem;
+    padding-top: 15rem;
     &::before {
       content: "";
       position: absolute;
@@ -55,10 +55,11 @@
       left: 0;
       background: linear-gradient(
         180deg,
-        #052a2a00 0%,
-        #052a2a 35%,
-        #4f5e36 75%,
-        #4f5e3600 100%
+        rgba(11, 26, 22, 0) 8.38%,
+        #0b1a16 45%,
+        #12140b 75.72%,
+        rgba(19, 22, 12, 0.3) 87.63%,
+        rgba(20, 22, 12, 0) 100%
       );
     }
     &::after {
@@ -70,10 +71,10 @@
       left: 0;
       background: linear-gradient(
         180deg,
-        #78814200 0%,
-        #788142 35%,
-        #436137 70%,
-        #43613700 100%
+        rgba(23, 32, 14, 0) 0%,
+        #1c1f0e 30%,
+        #010101 60%,
+        rgba(2, 4, 3, 0) 100%
       );
       z-index: 1;
     }
@@ -139,7 +140,7 @@
   @media screen and (max-width: 600px) {
     .website {
       padding: 0 1rem;
-      padding-top: 8rem;
+      padding-top: 15rem;
       gap: 5rem;
       h2 {
         font-size: 3rem;
